--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,3 +3,6 @@
 - template: src=mit-typo3.include-{{ mit_nginx_typo3_version }} dest=/etc/nginx/conf.d/mit-typo3.include
   notify: Restart nginx  
 
+- template: src=mit-typo3-v2.include-{{ mit_nginx_typo3_version }} dest=/etc/nginx/conf.d/mit-typo3-v2.include
+  notify: Restart nginx  
+
