--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,17 @@
 ---
 
-- template: src=mit-typo3.include-{{ mit_nginx_typo3_version }} dest=/etc/nginx/conf.d/mit-typo3.include
-  notify: Restart nginx  
+- template: src={{ item }} dest=/etc/nginx/conf.d/
+  with_items:
+    - local-mit-typo3-8.include
+  notify: Reload nginx  
 
-- template: src=mit-typo3-v2.include-{{ mit_nginx_typo3_version }} dest=/etc/nginx/conf.d/mit-typo3-v2.include
-  notify: Restart nginx  
+# This might be skipped for old sites
+- name: Check deprecated files
+  command: ls {{ item }}
+  register: cmd_ls
+  failed_when: cmd_ls.rc == 0
+  changed_when: no
+  with_items:
+    - /etc/nginx/conf.d/mit-typo3.include
+    - /etc/nginx/conf.d/mit-typo3-v2.include
 
